Добавление иконки кнопки открытия окна правил

--- a/copy_assembly/resources/style.qss
+++ b/copy_assembly/resources/style.qss
@@ -61,3 +61,11 @@ QTreeView::item:selected:!active {
     text-decoration: underline;
     border: none;
 }
+
+#QButtonGetRules {
+    border: none;
+}
+
+#QButtonGetRules:hover {
+    background-color: #CEEAF8;
+}
