--- a/projects/resources/spec_resources/spec_style.qss
+++ b/projects/resources/spec_resources/spec_style.qss
@@ -5,7 +5,7 @@
 QPushButton {
     border: 1px solid #d1d5db;
     border-radius: 6px;
-    min-height: 20px;
+    height: 20px;
     background-color:  #ffffff;
 }
 
@@ -84,4 +84,32 @@ QTableCornerButton::section {
 
 #label_show_current_zoom:hover {
     background-color: rgb(2, 117, 2);
+}
+
+/* --------------------- ColorToolButton -----------------------------*/
+
+#btn_left {
+    border-left: 1px solid #d1d5db;
+    border-top: 1px solid #d1d5db;
+    border-bottom: 1px solid #d1d5db;
+    border-right: none;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+#btn_rigth {
+    border-right: 1px solid #d1d5db;
+    border-top: 1px solid #d1d5db;
+    border-bottom: 1px solid #d1d5db;
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+#btn_not_fill, #btn_get_other_color {
+    border-radius: 0;
 }
